  * DONE [2009-08-31] <h1>...</h1> et al. should get proper names (for use with
    <a href="...#NAME">...</a>)
  * DONE [2009-08-29] fix link in page footer to CSS validator
  * DONE [2009-08-31] verify CSS against w3c validator
  * DONE [2008-08-25] typographical " and ' in links (see e.g. index.html)
  * index.html should have blank lines between grammar & dictionary &
    additional parts

THEREAFTER
----------
* verify (X?)HTML against w3c validator
  o DONE [2009-09-01] " -> &rdquo; needs to not happen inside HTML <...> tags
    (XHTML validation of "klo/index.html" is broken)

* Makefile should produce/update RSS + Atom feed compare:
  http://xkcd.com/rss.xml + http://xkcd.com/atom.xml look at:
  http://www.nabble.com/git2rss-----publish-changes-from-git-log-via-RSS-td5172008.html
  usr/bin/git2rss

* use HTML meta tags (Dublin Core?) for creation date etc

* working favicon -- can we have both compability and a beutiful icon?

* update online dictionary with info on KLI KLCP words

* check that Stevo's suggestions (already done?) for corrections in CK and PK
  are implemented

* create a page for journalists (primary in Swedish, secondary in English) with
  a *very brief* howto on Klingon, what mistakes to avoid and what people to
  contact within the Klingon Scholarly Academy for more information
  o suggested reading: "The Quick 'n Dirty Guide to Klingon Grammar" by Teresh
    Donnelly [http://teresh.tdonnelly.org/briefklingram.html]

* create a bragging page with a list of interviews, lectures, courses and other
  things held by, or done in the name of, the Klingon Language Scholarly Academy
  o add the following (google up more info, if possible):

    * 2009-05-07 (about 8 o'clock in the morning): Appearance in Swedish
      national television program "Nyhetsmorgon" ("News morning") on channel
      TV4. Interviewed together with Peter Söderlund, chairman of Stockholm
      Trekkers. Their interest in Star Trek was spurred by the release of the