@@ -39,9 +39,12 @@
 <p class="copyright">
 ©<!--YEAR-->, Copyright <!--AUTHOR-->, <a href="http://klingonska.org/">Klingonska Akademien</a>, Uppsala.</p>
 <p class="validator">
-  <a href="http://validator.w3.org/check?uri=<!--URL-->">[XHTML]</a>
-  <a href="http://jigsaw.w3.org/css-validator/validator?uri=<!--URL-->">[CSS]</a>
-  <a href="http://validator.w3.org/checklink?uri=<!--URL-->">[Links]</a>
+  License:
+  <a href="http://creativecommons.org/licenses/by-sa/3.0/" rel="license">CC BY&ndash;SA</a>.&nbsp;
+  Validate:
+  <a href="http://validator.w3.org/check?uri=<!--URL-->">XHTML</a>,
+  <a href="http://jigsaw.w3.org/css-validator/validator?uri=<!--URL-->">CSS</a>,
+  <a href="http://validator.w3.org/checklink?uri=<!--URL-->">links</a>.
 </p>
 </div>
 </body>
